Major clean up, adding height and width to floors and ceilings
