# backend/src/dto/surface-dimension/SurfaceDimensionResponseDto.ts
@@ -1,0 +1,11 @@
+import { SurfaceType } from '../../entities/DimensionSegment';
+
+export class SurfaceDimensionResponseDto {
+  id!: number;
+  surfaceType!: SurfaceType;
+  width!: number;
+  length!: number;
+  roomId!: number;
+  createdAt!: string;
+  updatedAt!: string;
+}
