# backend/src/dto/surface-dimension/UpsertSurfaceDimensionDto.ts
@@ -1,0 +1,11 @@
+import { IsNumber, IsPositive } from 'class-validator';
+
+export class UpsertSurfaceDimensionDto {
+  @IsNumber()
+  @IsPositive()
+  width!: number;
+
+  @IsNumber()
+  @IsPositive()
+  length!: number;
+}
